# credit-card-fraud-detection

./: .gitignore  README.md  download_data.sh  pyproject.toml
notebooks/: example_request.ipynb  notebook.ipynb
src/: Dockerfile  example_post_request.md  payment_operations.py  predict.py  train.py
