[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Machine Learning project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
repo = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
    "fastapi",
    "uvicorn[standard]",
    "scikit-learn>=1.8.0",
]

api = [
    "fastapi",
    "uvicorn[standard]",
    "xgboost>=3.1.3",
]
